main/default/objects/OAuth2__c/OAuth2__c.object-meta.xml
<CustomObject>
    <description>Used to store OAuth2 connections</description>
    <label>OAuth 2.0</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth 2.0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>