main/default/objects/OAuth2__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>This is the returned access token once successfully logged in with a client id and secret</description>
    <label>Access Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>