main/default/objects/OAuth2__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>The client id given by apps that allow oauth</description>
    <label>Client Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>