main/default/objects/OAuth2__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>The client secret given by apps that allow oauth</description>
    <label>Client Secret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>