main/default/objects/OAuth2__c/fields/Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Expires_In__c</fullName>
    <description>The amount of time in seconds before the access token expires.</description>
    <label>Expires In (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>